force-app/main/default/objects/CI_TestResult__c/CI_TestResult__c.object-meta.xml
<CustomObject>
    <label>CI_TestResult</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>CI_TestResult Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CI_TestResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>