force-app/main/default/objects/CI_TestResult__c/fields/ClassID__c.field-meta.xml
<CustomField>
    <fullName>ClassID__c</fullName>
    <description>Class ID of this test</description>
    <label>ClassID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>