force-app/main/default/objects/CI_TestResult__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Error message</description>
    <inlineHelpText>Error message</inlineHelpText>
    <label>Message</label>
    <length>128000</length>
    <type>LongTextArea</type>
</CustomField>