force-app/main/default/objects/CI_TestResult__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <description>Class namespace</description>
    <label>Namespace</label>
    <length>32</length>
    <type>Text</type>
</CustomField>