force-app/main/default/objects/CI_TestResult__c/fields/Pass__c.field-meta.xml
<CustomField>
    <fullName>Pass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if test passed</description>
    <label>Pass</label>
    <type>Checkbox</type>
</CustomField>