force-app/main/default/objects/CI_TestResult__c/fields/Summary_Record__c.field-meta.xml
<CustomField>
    <fullName>Summary_Record__c</fullName>
    <description>True if this is a summary record</description>
    <formula>ISBlank(ClassID__c) || IsBlank( Test_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if this is a summary record</inlineHelpText>
    <label>Summary Record</label>
    <type>Checkbox</type>
</CustomField>