force-app/main/default/objects/CI_TestResult__c/fields/Test_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Name__c</fullName>
    <description>Concatenated class.method name for the test</description>
    <label>Test Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>